[package]
name = "h_struct"
version = "0.0.1"
authors = ["Thom Pennington <Thom@litmushealth.com>"]

[dependencies]
iron = "*"
router = "*"
typemap = "0.3.3"
plugin = "*" # for iron

serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"

slog = "*"
slog-term = "*"
slog-async = "*"
lazy_static = "0.2"

urlencoded = "*"
itertools = "*"

clippy = {version = "*", optional = true}
[features]
default = []
