[package]
name = "litmus_ci"
version = "0.0.1"
authors = ["Thom Pennington <Thom@litmushealth.com>"]

[dependencies]
iron = "*"
router = "*"
typemap = "0.3.3"
plugin = "*" # for iron

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

slog = "*"
slog-term = "*"
slog-async = "*"
lazy_static = "0.2"

urlencoded = "*"
itertools = "*"

toml = "0.4"

clippy = {version = "*", optional = true}
[features]
default = []
