[package]
name = "rs_build"
version = "0.0.3"
authors = ["Thom Pennington <thompennington@gmail.com>"]

[dependencies]
rustc-serialize = "0.3"
chrono = { version = "0.3", features = ["serde"] }
iron = "*"
router = "*"
typemap = "0.3.3"
plugin = "*" # for iron

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

slog = "*"
slog-term = "*"
slog-async = "*"
lazy_static = "0.2"

urlencoded = "*"
itertools = "*"

toml = "0.4"

rustache = "^0.1"
mustache = "*"
avro = { git = "https://github.com/kernelbandwidth/avro-rs.git" }

rusqlite = "*"
hyper = "*"
rust-crypto = "^0.2"